[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/quick_scene_ids/Editor/SceneIDEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/quick_scene_ids/Editor/choose_icon.tres" type="Texture" id=2]
[ext_resource path="res://addons/quick_scene_ids/Editor/scene_icon.tres" type="Texture" id=3]
[ext_resource path="res://addons/quick_scene_ids/Editor/remove_icon.tres" type="Texture" id=4]
[ext_resource path="res://addons/quick_scene_ids/Editor/browse_icon.tres" type="Texture" id=5]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
grow_end = 0.0
thickness = 2
vertical = true

[node name="SceneIDEdit" type="HBoxContainer"]
margin_right = 501.0
margin_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_rect = Rect2( 0, 3, 200, 100 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 24.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="SceneEdit" type="LineEdit" parent="."]
margin_left = 28.0
margin_right = 200.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "res://path/to/scene.tscn"

[node name="ScenesMenuButton" type="Button" parent="."]
margin_left = 204.0
margin_right = 232.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Choose from open scenes"
icon = ExtResource( 2 )
flat = true

[node name="ScenesMenu" type="PopupMenu" parent="ScenesMenuButton"]
margin_left = -5.0
margin_top = 31.0
margin_right = 187.0
margin_bottom = 178.0

[node name="Browse" type="Button" parent="."]
margin_left = 236.0
margin_right = 264.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Browse Scene"
icon = ExtResource( 5 )
flat = true

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 268.0
margin_right = 272.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 276.0
margin_top = 8.0
margin_right = 289.0
margin_bottom = 22.0
text = "Id"

[node name="IdEdit" type="LineEdit" parent="."]
margin_left = 293.0
margin_right = 465.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "ID"

[node name="Remove" type="Button" parent="."]
margin_left = 469.0
margin_right = 497.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "Remove this scene id"
icon = ExtResource( 4 )
flat = true

[node name="FreePos" type="Control" parent="."]
margin_left = 501.0
margin_right = 501.0
margin_bottom = 30.0

[node name="TscnDialog" type="FileDialog" parent="FreePos"]
margin_left = -881.481
margin_top = 97.5956
margin_right = -108.481
margin_bottom = 526.596
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tscn" )
current_file = "scene_ids.tres"
current_path = "res://scene_ids.tres"

[connection signal="text_changed" from="SceneEdit" to="." method="_on_changed"]
[connection signal="pressed" from="ScenesMenuButton" to="." method="_on_choose"]
[connection signal="id_pressed" from="ScenesMenuButton/ScenesMenu" to="." method="_on_item"]
[connection signal="index_pressed" from="ScenesMenuButton/ScenesMenu" to="." method="_on_item"]
[connection signal="pressed" from="Browse" to="." method="_on_browse"]
[connection signal="text_changed" from="IdEdit" to="." method="_on_changed"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
[connection signal="confirmed" from="FreePos/TscnDialog" to="." method="_on_tscn_dialog"]
